--- a/03-methylation.Rmd
+++ b/03-methylation.Rmd
@@ -29,7 +29,7 @@ tail feature-tracks/scf_01-meth.bedgraph
 
 
 ```{r}
-scf01_meth.bg <- read.csv("feature-tracks/scf_01-meth.bedgraph", sep = "\t", header = FALSE)
+scf01_meth.bg <- read.csv("feature-tracks/scf_01-meth.bedgraph", sep = " ", header = FALSE)
 
 head(scf01_meth.bg)
 
@@ -40,10 +40,35 @@ head(scf01_meth_75.bedGraph)
 ```
 
 ```{r}
-write_delim(testv3.bedGraph, "analyses/testv3.bedGraph", delim = "\t", col_names = FALSE)
+write_delim(scf01_meth_75.bedGraph, "feature-tracks/scf01_meth_75.bedGraph", delim = "\t", col_names = FALSE)
 ```
 
 
 
+
+```{r}
+scf01_meth_75 = import.bedGraph("feature-tracks/scf01_meth_75.bedGraph")
+
+```
+
+```{r}
+
+kp <- plotKaryotype(genome=duck.genome, plot.type=2, chromosomes=c("1"))
+
+kpAxis(kp, ymin=0, ymax=100, r0=NULL, r1=NULL, data.panel=1, col="gray50", cex=0.5)
+
+
+kpPoints(kp, data=scf01_meth_75, x=scf01_meth_75$ranges, y=scf01_meth_75$score,
+           ymin=0, ymax=100, data.panel=1, r0=NULL, r1=NULL, col=adjustcolor("pink", 0.5), pch=".", cex=0.2)
+
+kpPlotDensity(kp, data=scf01_meth_75, window.size = 1000, data.panel=2, col=adjustcolor("green", 0.5), lwd=0.5, border=adjustcolor("green", 0.5), r0=0, r1=1) 
+  
+kpPlotDensity(kp, data=scf01_gene,window.size = 100000, data.panel=1)  
+
+
+#kpPlotRegions(kp, scf01_meth_75, col="blue", r0=0, r1=.2, avoid.overlapping = TRUE, num.layers = 2)
+
+
+```
 
 
