create objs and save image
created objects within script so this script can be run independent of other scripts and save image

--- a/05-DMR.Rmd
+++ b/05-DMR.Rmd
@@ -3,6 +3,7 @@ title: "05-DMR"
 output: html_document
 ---
 
+load libraries
 ```{r}
 library("tidyverse")
 library(rtracklayer)
@@ -10,41 +11,48 @@ library(karyoploteR)
 ```
 
 
+make genome
+```{r}
+duck.genome <- toGRanges(data.frame(chr=c("1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18" ), start=c(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), end=c(89643857,	69596280,	57743597, 65288255, 67248332, 61759565, 43120122, 61151155, 38581958, 53961475, 51449921, 50438331, 44396874, 45393038, 47938513, 31980953, 34923512,	27737463)))
+```
 
+read in bed files
 ```{r}
 bedfile <- read.csv("feature-tracks/amb_AllTimes_DMR250bp_MCmax30_cov5x_rms_results_collapsed_AOV0.1.DMR.bed", header = FALSE, sep = "\t")
 ```
 
 
-
-
+convert PGA_scaffold...length_... to just scaffold number
 ```{r}
-#for (i in nrow(bedfile)){
 bedfile[,1] <- gsub("__.*","",bedfile[,1])
 bedfile[,1] <- gsub("PGA_scaffold","",bedfile[,1])
-#}
 ```
 
+preview the changes
 ```{r}
 View(bedfile)
 ```
 
 
-
+write out the modified bedfile
 ```{r}
 write_delim(bedfile, "feature-tracks/amb_dmr.bed", delim = "\t", col_names = FALSE)
 ```
 
-
-
-
-
+import the modified bedfile as a GRanges obj
 ```{r}
 amb_dmr =  import("feature-tracks/amb_dmr.bed")
 
+scf01_gene =  import("feature-tracks/scf_01-gen.bed")
+
+scf01_meth_75 = import.bedGraph("feature-tracks/scf01_meth_75.bedGraph")
+
+scf02_TE = import("feature-tracks/scf_02-TE.bed")
 ```
 
+plot 
 ```{r}
+jpeg("amb_DMRs.jpg", width =3000, height = 4000)
 
 #kp <- plotKaryotype(genome=duck.genome, plot.type=2, chromosomes=c("1", "2" ))
 kp <- plotKaryotype(genome = duck.genome)
@@ -57,14 +65,14 @@ kpPlotDensity(kp, data=scf01_meth_75, window.size = 1000, data.panel=2, col=adju
   
 kpPlotDensity(kp, data=scf01_gene,window.size = 100000, data.panel=1)  
 
-amb_dmr
 kpPlotRegions(kp, scf02_TE, col="blue", r0=0, r1=NULL, avoid.overlapping = TRUE, num.layers = 5)
 
-kpPoints(kp, data=scf01_meth_75, x=scf01_meth_75$ranges, y=scf01_meth_75$score,
-           ymin=NULL, ymax=100, data.panel=1, r0=NULL, r1=NULL, col=adjustcolor("dark blue"), pch=".", cex=1)
-
+kpPoints(kp, data=scf01_meth_75, x=scf01_meth_75$ranges, y=scf01_meth_75$score, ymin=NULL, ymax=100, data.panel=1, r0=NULL, r1=NULL, col=adjustcolor("dark blue"), pch=".", cex=1)
 
 kpPlotRegions(kp, amb_dmr, col="red", data.panel=2, r0=NULL, r1=5, avoid.overlapping = TRUE, num.layers = 5)
+
+
+dev.off()
 
 
 ```
