--- a/06-methylation-heatmap.Rmd
+++ b/06-methylation-heatmap.Rmd
@@ -25,17 +25,44 @@ kp <- plotKaryotype(genome = duck.genome)
 #methylation data from concat of all EPI reads at minimum of 10x coverage
 #500MB file
 PgAll <- read_delim("http://gannet.fish.washington.edu/seashell/snaps/PgALL.bed", delim = "\t", col_names = FALSE)
+names(PgAll)<-make.names(names(PgAll),unique = TRUE)
 ```
+
+```{r}
+head(PgAll)
+```
+
+
 
 ```{r}
 PgALL.meth <- (PgAll %>% mutate(name = "meth") %>% select (X1, X2, X3, name, X4))
 ```
 
+
 ```{r}
-write.table(PgALL.meth, "feature-tracks/PgALLmeth.bed", col.names = FALSE)
+write.table(PgALL.meth, "feature-tracks/PgALLmeth.bed", col.names = FALSE, row.names = FALSE, quote = FALSE)
 
 ```
 
+```{r}
+Pg_01.meth <- (PgAll %>% mutate(name = "meth") %>% select (X1, X2, X3, name, X4) %>% filter(X1 == "Scaffold_01"))
+```
+
+
+```{r}
+head(PgAll)
+PgAll %>% filter(X1 != "Scaffold_01 ") 
+```
+
+
+```{r}
+PgAll %>% mutate(name = "meth") %>% filter(X1 == "Scaffold_01") %>% select (X1, X2, X3, name, X4) %>% head
+```
+
+```{r}
+write.table(Pg_01.meth, "feature-tracks/Pg01meth.bed", col.names = FALSE, row.names = FALSE, quote = FALSE)
+
+```
 
 ```{bash}
 head feature-tracks/PgALLmeth.bed
@@ -63,10 +90,12 @@ duck.genome.old <- toGRanges(data.frame(chr=c("1", "2", "3", "4", "5", "6", "7",
 ```{r}
 kp.old <- plotKaryotype(genome = duck.genome.old, plot.type=1)
 
-y <- sin(x=c(1:length(kp.old))/2)
 
-kpHeatmap(kp.old, scf01_meth_75, y="3", colors = c("green", "black", "red"))
 
+kpPlotHorizon(kp.old, scf01_meth_75, y="3", colors = c("green", "black", "red"))
+
+
+kpPlotHorizon()
 
 
 ```
