--- a/06-methylation-heatmap.Rmd
+++ b/06-methylation-heatmap.Rmd
@@ -27,22 +27,28 @@ kp <- plotKaryotype(genome = duck.genome)
 Pg01m <- read_delim("http://gannet.fish.washington.edu/seashell/snaps/Pg01.txt", delim = " ", col_names = FALSE)
 
 ```
-```{r} 
-Pf01r <- Pg01m %>% mutate_at(vars(X4), funs(round(., 2)))
 
+```{r}
+str(Pg01m)
+```
+```{r}
+class(Pg01m$X2) <- "integer"
 ```
 
 
 
+
+
+
 ```{r}
-head(Pf01r)
+head(Pg01m)
 ```
 
 
 
 
 ```{r}
-write.table(Pf01r, file = "feature-tracks/Pf01r.bedGraph", col.names = FALSE, row.names = FALSE, quote = FALSE, sep = "\t")
+write.table(Pg01m, file = "feature-tracks/Pf01r.bedGraph", col.names = FALSE, row.names = FALSE, quote = FALSE, sep = "\t")
 
 ```
 
@@ -68,6 +74,9 @@ head(scf01_meth_75)
 Pg01_meth = import.bedGraph("feature-tracks/Pf01r.bedGraph")
 head(Pg01_meth)
 ```
+```{r}
+new <- head(Pg01_meth)
+```
 
 
 
@@ -75,17 +84,23 @@ head(Pg01_meth)
 library(grDevices)
 ```
 
+```{r}
+str(Pg01_meth)
+```
 
 
 
 ```{r}
 kp <- plotKaryotype(genome = duck.genome, chromosomes = c("Scaffold_01"), plot.type=1)
+#
 
-kpPlotDensity(kp, data=Pg01_meth, window.size = 100000, data.panel=2, col="lightgrey", r0=0, r1=1.5) 
+#kpPlotDensity(kp, data=Pg01_meth, window.size = 100000, data.panel=2, col="lightgrey", r0=0, r1=1.5) 
 
 #kpPoints(kp, data=Pg01_meth, x=Pg01_meth$ranges, y=Pg01_meth$score,ymin=NULL, ymax=100, data.panel=1, r0=NULL, r1=NULL, col=adjustcolor("dark blue"), pch=".", cex=1)
 
-#kpHeatmap(kp, data=Pg01_meth, x0=Pg01_meth$ranges, x1=Pg01_meth$ranges, y=Pg01_meth$score, ymin = 90, ymax = 100, r0=0.8, r1=1, color=c("orange", "black", "purple", "green"))
+#kpHeatmap(kp, data=a4_LINE, y=a4_LINE$score, ymin = 90, ymax = 100, r0=0.8, r1=1, colors = c("red", "black", "green"))
+
+kpHeatmap(kp, data=newnew, y=newnew$score, ymin = 90, ymax = 100, r0=0.8, r1=1, colors = c("red", "black", "green"))
   
 #kpLines(kp, data=Pg01_meth, y=Pg01_meth$score)
 
@@ -99,6 +114,34 @@ kpPlotHorizon(kp, data=Pg01_meth, x=Pg01_meth$ranges, y=Pg01_meth$score, col="re
 
 
 ```
+
+
+
+
+```{r}
+  
+dd <- toGRanges(data.frame(chr="chr1", start=4980000*(0:49), end=4980000*(1:50)))
+y <- sin(x=c(1:length(dd))/2)
+
+kp <- plotKaryotype("hg19", plot.type=1, chromosomes=c("chr1", "chr2"))
+
+kpLines(kp, dd, y=y, r0=0.4, r1=0.6, ymin=-1, ymax=1)
+kpAxis(kp, r0=0.4, r1=0.6, ymin=-1, ymax=1, cex=0.5)
+
+kpHeatmap(kp, dd, y=y, colors = c("red", "black", "green"), r0=0, r1=0.2)
+kpHeatmap(kp, dd, y=y, colors = c("green", "black", "red"), r0=0.2, r1=0.4)
+
+#or we can provide all data into a single GRanges object
+mcols(dd) <- data.frame(y=y)
+
+kpHeatmap(kp, dd, r0=0.6, r1=0.8)
+#non-contiguous regions appear as solitary rectangles
+kpHeatmap(kp, sample(x = dd, 10), r0=0.8, r1=1, color=c("orange", "black", "purple", "green"))
+
+
+
+```
+
 
 
 ```{r}
