--- a/06-methylation-heatmap.Rmd
+++ b/06-methylation-heatmap.Rmd
@@ -75,7 +75,7 @@ Pg01_meth = import.bedGraph("feature-tracks/Pf01r.bedGraph")
 head(Pg01_meth)
 ```
 ```{r}
-new <- head(Pg01_meth, n=100000)
+new <- head(Pg01_meth, n=10000)
 new
 ```
 
@@ -97,16 +97,26 @@ str(Pg01_meth)
 ```
 
 
+```{r}
+duck.genome.01 <- toGRanges(data.frame(chr=c("Scaffold_01"), start=c(1), end=c(867500)))
+```
+
+
+
 
 ```{r}
-kp <- plotKaryotype(genome = duck.genome, chromosomes = c("Scaffold_01"), plot.type=2)
+
+
+kp <- plotKaryotype(genome = duck.genome.01, chromosomes = c("Scaffold_01"), plot.type=1)
 #
 
-#kpPlotDensity(kp, data=new, window.size = 10, data.panel=2, col="lightgrey", r0=0, r1=NULL) 
+#kpPlotHorizon(kp, data=new, x=new$ranges, y=new$score, data.panel=1)
 
-kpPoints(kp, data=new, x=new$ranges, y=new$score,ymin=NULL, ymax=100, data.panel=1, r0=NULL, r1=NULL, col=adjustcolor("dark blue"), pch=".", cex=1)
+#kpPlotDensity(kp, data=new, window.size = 100, data.panel=1, col="lightgrey", r0=0, r1=NULL) 
 
-#kpHeatmap(kp, data=a4_LINE, y=a4_LINE$score, ymin = 90, ymax = 100, r0=0.8, r1=1, colors = c("red", "black", "green"))
+kpPoints(kp, data=new, x=new$ranges, y=new$score,ymin=NULL, ymax=100, data.panel=1, r0=NULL, r1=NULL, col="black", pch=".", cex=0.002)
+
+#kpHeatmap(kp, data=new, y=new$score, data.panel=2, r1 =10)
 
 #kpHeatmap(kp, data=newnew, y=newnew$score, ymin = 90, ymax = 100, r0=0.8, r1=1, colors = c("red", "black", "green"))
   
@@ -115,7 +125,7 @@ kpPoints(kp, data=new, x=new$ranges, y=new$score,ymin=NULL, ymax=100, data.panel
 
 #kpLines(kp, data=Pg01_meth, chr=NULL, x=Pg01_meth$ranges, y=Pg01_meth$score, ymin=NULL, ymax=NULL, data.panel=1, r0=NULL, r1=NULL)
 
-kpPlotHorizon(kp, data=new, x=new$ranges, y=new$score, data.panel=1, num.parts = 30, ymin = 0, ymax = 100)
+
 
 #kpPlotHorizon(kp, data=Pg01_meth, x=Pg01_meth$ranges, y=Pg01_meth$score, col="redblue6")
 
